# ACIQ

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/engine/accountantiq_engine/: __init__.py  main.py
apps/engine/tests/: test_health.py  test_suggest.py
apps/ui/: .eslintrc.cjs  .prettierrc  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/ui/src/: App.test.tsx  App.tsx  styles.css
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/src/: main.rs
examples/: bank_sample_01.csv  bank_sample_02.csv  sage_history_sample.csv
